potential bug fix: preventing mobile horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -222,6 +222,10 @@ header {
 }
 
 @media screen {
+    html {
+        overflow-x: hidden;
+    }
+
     #page-title {
         font-size: medium;
     }
